# Numerical-Optimization-in-Robotics-Homework

./: README.md
Course_1/L1_HW_Solution/Example_1/: Declaration.txt  GradientDescent_2D.py
Course_2/Example_1/src/gcopter/: CMakeLists.txt
Course_2/Example_1/src/gcopter/config/: curve_gen.yaml  global_planning.rviz
Course_2/Example_1/src/gcopter/include/gcopter/: cubic_curve.hpp  cubic_spline.hpp  lbfgs.hpp  path_smoother.hpp
Course_2/Example_1/src/gcopter/include/misc/: visualizer.hpp
Course_2/Example_1/src/gcopter/launch/: curve_gen.launch
Course_2/Example_1/src/gcopter/src/: curve_gen.cpp
Course_3/Example_1/L3_HW_Solution/L3_HW_Solution/task_2_1/example/: sdqp_example.cpp
Course_3/Example_1/L3_HW_Solution/L3_HW_Solution/task_2_2/collision_distance_computation/: CMakeLists.txt
Course_3/Example_1/L3_HW_Solution/L3_HW_Solution/task_3/car_simulator/: package.xml
Course_3/Example_1/L3_HW_Solution/L3_HW_Solution/task_3/car_simulator/config/: car_simulator.yaml  rviz_sim.rviz
Course_3/Example_1/L3_HW_Solution/L3_HW_Solution/task_3/car_simulator/launch/: car_simulator.launch
Course_3/L3_HW_Solution/L3_HW_Solution/task_2_2/collision_distance_computation/: package.xml
Course_3/L3_HW_Solution/L3_HW_Solution/task_3/car_msgs/: CMakeLists.txt
Course_3/L3_HW_Solution/L3_HW_Solution/task_3/car_simulator/: CMakeLists.txt  nodelet_plugin.xml
Course_3/L3_HW_Solution/L3_HW_Solution/task_3/car_simulator/src/: car_simulator_nodelet.cpp
Course_3/L3_HW_Solution/L3_HW_Solution/task_3/mpc_car/: package.xml
Course_4/Example_1/L4_HW_Solution/: Declaration.txt
Course_4/Example_1/L4_HW_Solution/L4_HW_Solution/SDQP/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  readme  sdqp_example
Course_4/Example_1/L4_HW_Solution/L4_HW_Solution/socp/: CMakeLists.txt  readme  socp.cpp
(+19 files in other folders)
